--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "alwaseet",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./app/assets/main-img/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./app/assets/main-img/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#1D3557"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -20,7 +20,7 @@
       "supportsTablet": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./app/assets/main-img/favicon.png"
     }
   }
 }
