--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.4",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.8.1",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "axios": "^0.20.0",
     "expo": "~39.0.2",
-    "expo-ads-admob": "^8.3.0",
+    "expo-ads-admob": "~8.3.0",
     "expo-font": "^8.3.0",
     "expo-secure-store": "^9.2.0",
     "expo-status-bar": "~1.0.2",
