--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.20.0",
     "expo": "~39.0.2",
     "expo-ads-admob": "~8.3.0",
+    "expo-av": "^8.6.0",
     "expo-font": "^8.3.0",
     "expo-secure-store": "^9.2.0",
     "expo-status-bar": "~1.0.2",
