Created Auth Context

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "alwaseet",
+    "name": "الوسيط",
     "slug": "alwaseet",
     "version": "1.0.0",
     "orientation": "portrait",
